# AccountsApp

./: .env  alembic.ini  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/v1/: account_export.py  account_import.py  accounts.py  contact.py  departments.py  locations.py  projects.py  statuses.py  units.py  verticals.py
app/core/: config.py
app/models/: __init__.py  account.py  address.py  contact.py  lookup_models.py  project.py
app/schemas/: account.py  address.py  audit.py  contact.py  department.py  location.py  lookup_base.py  project.py  status.py  unit.py  vertical.py
migrations/: env.py
migrations/versions/: 3d9e1ed102b6_initial.py  58f246e81cfb_fix_unique_constraints.py
